<resources>
    4<string name="app_name">ICE5</string>
<!--    <string name="house">\uf015</string>-->
    <string name="plus_minus">\ue43c</string>
    <string name="minus">\uf068</string>
    <string name="plus">\u002b</string>
    <string name="divide">\uf529</string>
    <string name="multiply">\uf00d</string>
    <string name="percent">\u0025</string>
    <string name="delete">\uf55a</string>
    <string name="equal">\u003d</string>
</resources>