<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/resultRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/m_x"
            android:layout_marginEnd="@dimen/m_x"
            android:layout_weight="1"
            android:fontFamily="@font/fa_solid_900"
            android:gravity="end"
            android:paddingStart="@dimen/p_x"
            android:paddingTop="@dimen/p_y"
            android:paddingEnd="@dimen/p_x"
            android:paddingBottom="@dimen/p_y"
            android:text="0"
            android:textSize="@dimen/result_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/fourthRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultRow">

        <Button
            android:id="@+id/clearButton"
            style="@style/light_grey_button"
            android:tag="Clear"
            android:text="C" />

        <Button
            android:id="@+id/percentButton"
            style="@style/light_grey_button"
            android:tag="percentButton"
            android:text="@string/percent" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/light_grey_button"
            android:tag="Delete"
            android:text="@string/delete" />

        <Button
            android:id="@+id/divideButton"
            style="@style/operator_button"
            android:tag="divideButton"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/thirdRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifthRow">

        <Button
            android:id="@+id/sevenButton"
            style="@style/dark_grey_button"
            android:tag="7"
            android:text="7" />

        <Button
            android:id="@+id/eightButton"
            style="@style/dark_grey_button"
            android:tag="8"
            android:text="8" />

        <Button
            android:id="@+id/nineButton"
            style="@style/dark_grey_button"
            android:tag="9"
            android:text="9" />

        <Button
            android:id="@+id/mulitplyButton"
            style="@style/operator_button"
            android:tag="multiplyButton"
            android:text="@string/multiply" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/secondRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourthRow">

        <Button
            android:id="@+id/fourButton"
            style="@style/dark_grey_button"
            android:tag="4"
            android:text="4" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/dark_grey_button"
            android:tag="5"
            android:text="5" />

        <Button
            android:id="@+id/sixButton"
            style="@style/dark_grey_button"
            android:tag="6"
            android:text="6" />

        <Button
            android:id="@+id/minusButton"
            style="@style/operator_button"
            android:tag="minusButton"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/firstRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdRow">

        <Button
            android:id="@+id/oneButton"
            style="@style/dark_grey_button"
            android:tag="1"
            android:text="1" />

        <Button
            android:id="@+id/twoButton"
            style="@style/dark_grey_button"
            android:tag="2"
            android:text="2" />

        <Button
            android:id="@+id/threeButton"
            style="@style/dark_grey_button"
            android:tag="3"
            android:text="3" />

        <Button
            android:id="@+id/plusButton"
            style="@style/operator_button"
            android:tag="plusButton"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondRow">

        <Button
            android:id="@+id/plusMinusButton"
            style="@style/light_grey_button"
            android:tag="Plus_Minus"
            android:text="@string/plus_minus" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/dark_grey_button"
            android:tag="0"
            android:text="0" />

        <Button
            android:id="@+id/decimalButton"
            style="@style/dark_grey_button"
            android:tag="."
            android:text="." />

        <Button
            android:id="@+id/equalsButton"
            style="@style/operator_button"
            android:tag="equalButton"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
